--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "@tensorflow/tfjs": "^0.14.2",
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "react-swipeable-views": "^0.13.0",
-    "react-swipeable-views-utils": "^0.13.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-scripts": "5.0.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@mui/material": "^5.15.0",
+    "@mui/icons-material": "^5.15.0",
+    "react-swipeable-views": "^0.14.1",
+    "react-swipeable-views-utils": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +31,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^6.3.0"
   }
 }
